--- a/COVID19DETECTOR/app/src/main/res/drawable/facebookbutton.xml
+++ b/COVID19DETECTOR/app/src/main/res/drawable/facebookbutton.xml
@@ -7,5 +7,5 @@
         />
     <stroke android:color="@color/white"
         android:width="1dp"/>
-<solid android:color="@color/colorPrimaryDark"/>
+<solid android:color="@color/white"/>
 </shape>
