--- a/COVID19DETECTOR/app/src/main/res/layout/activity_main.xml
+++ b/COVID19DETECTOR/app/src/main/res/layout/activity_main.xml
@@ -4,28 +4,58 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:background="@drawable/background1"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
+
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:layout_margin="20dp"
+        android:scaleType="center" />
 
     <TextView
         android:id="@+id/textViewName"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
+
+        android:layout_gravity="center"
+        android:layout_margin="20dp"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center"
+
+        android:textColor="@color/white"
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/textViewEmail"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
+
+        android:layout_gravity="center"
+        android:layout_margin="20dp"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center"
+
+        android:textColor="@color/white"
+        android:textSize="15sp" />
 
     <Button
-        android:id="@+id/NEXT"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+        android:id="@+id/btnlogin"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:layout_margin="20dp"
+        android:background="@drawable/btn_bg"
+
+        android:paddingLeft="70dp"
+        android:paddingRight="70dp"
+        android:text="Proceed To Diagnosis"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="16sp" />
 </LinearLayout>
