--- a/COVID19DETECTOR/app/src/main/res/values/colors.xml
+++ b/COVID19DETECTOR/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="transparent">#FFFFFF</color>
     <color name="grad_start">#19AA88</color>
     <color name="grad_end">#23A7D8</color>
+    <color name="blue">#FF0D47A1</color>
 </resources>
