--- a/COVID19DETECTOR/app/src/main/res/layout/activity_main.xml
+++ b/COVID19DETECTOR/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
         android:textSize="15sp" />
 
     <Button
-        android:id="@+id/btnlogin"
+        android:id="@+id/btndiagnosis"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
 
