--- a/COVID19DETECTOR/app/src/main/res/layout/activity_splashscreen.xml
+++ b/COVID19DETECTOR/app/src/main/res/layout/activity_splashscreen.xml
@@ -97,7 +97,7 @@
                         android:textSize="15sp" />
 
                     <EditText
-                        android:id="@+id/etpass"
+                        android:id="@+id/etpassword"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
